--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Tarjeta María Astete</title>
 </head>
 <body>
-	
+	<div class="Tarjeta">
+		<div>
+			<div class="datos">
+				<div class="imagen"><img src=""></div>
+				<div class="contacto"></div>
+			</div>
+			<div class="logo">
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
