--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<link rel="stylesheet" href="Estilo/estilo.css">
 	<meta charset="UTF-8">
 	<title>Tarjeta María Astete</title>
 </head>
 <body>
 	<div class="Tarjeta">
-		<div>
+		<div class="bigbox">
 			<div class="datos">
-				<div class="imagen"><img src=""></div>
-				<div class="contacto"></div>
+				<div class="imagen"><img src="Imagenes/Perfil.jpg"></div>
+				<div id="info">
+					<div><p> Nombre: María Yesenia Astete Lincopán </p></div>
+					<div> <p> Profesión: Ingeniero Civil Industrial </p></div>
+					<div><p> Edad: 24 años</p></div>
+					<div> <p> Dirección: Valle del Itata 1145 </p></div>
+				</div>
 			</div>
 			<div class="logo">
 				<div></div>
