cambios en estilo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Tarjeta María Astete</title>
 </head>
 <body>
+	<img id="fondo" src="Imagenes/Fondo.jpg">
 	<div class="Tarjeta">
 		<div class="bigbox">
 			<div class="datos">
@@ -17,13 +18,13 @@
 					<div> <p> Dirección: Valle del Itata 1145 </p></div>
 				</div>
 			</div>
-			<div class="logo">
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
+			<div class="redes">
+				<div class="red"></div>
+				<div class="red"></div>
+				<div class="red"></div>
+				<div class="red"></div>
 			</div>
-		</div>
+			</div>	
 	</div>
 </body>
 </html>
