--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				</div>
 			</div>
 			<div class="redes">
-				<div class="red"></div>
-				<div class="red"></div>
-				<div class="red"></div>
-				<div class="red"></div>
+				<div class="red"><img src="Imagenes/linkedin.png"><a href="https://www.linkedin.com/in/mar%C3%ADa-yesenia-astete-lincop%C3%A1n-18b35baa/"></a></div>
+				<div class="red"> <img src="Imagenes/facebook.png"> <a href="https://www.facebook.com/myeseniaastete"></a></div>
+				<div class="red"><img src="Imagenes/twitter.png"><a href=""></a></div>
+				<div class="red"><img src="Imagenes/whatsapp.png"></div>
 			</div>
 			</div>	
 	</div>
